Fix centering on mobile.

--- a/fevs-style.css
+++ b/fevs-style.css
@@ -81,7 +81,8 @@ body {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
+  align-content: center;
   align-items: center;
   border-top: 1px solid rgba(0, 0, 0, 0.1);
   margin-bottom: 30px;
